samples/_failures_safe/1761525353_0ce4f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ee12970.c: In function ‘main’:
./samples/SAFE/__tmp_4ee12970.c:159:12: error: missing terminating " character
  159 |     printf("Available events: start, pause, resume, stop, error,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_4ee12970.c:159:5: error: expected expression at end of input
  159 |     printf("Available events: start, pause, resume, stop, error,
      |     ^~~~~~
./samples/SAFE/__tmp_4ee12970.c:159:5: error: expected declaration or statement at end of input
